remove header out of container for fixed positioning

--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -103,7 +103,7 @@ footer {
 }
 
 .container {
-  margin: $xxl $l;
+  margin: $m;
 }
 
 
